# quant-fabric

./: .gitignore  README.md  data.py  main.py  pyproject.toml
components/: __init__.py  chunked_data.py
database/: database.py
database/tests/: crud_test.py
fabriq/research/: momentum_bt.py  reversal_bt.py
fabriq/research/backtester/: backtester.py
fabriq/shared/: chunked_data.py  enums.py
fabriq/shared/database/: .gitignore  database.py
fabriq/shared/database/tests/: crud_test.py
fabriq/shared/datasets/: __init__.py  alpaca_assets.py  alpaca_stock.py  toy_dataset.py
fabriq/shared/optimizers/: __init__.py  decile_portfolio.py
fabriq/shared/signals/: __init__.py  momentum.py
fabriq/shared/strategies/: __init__.py  momentum.py  momentum_strategy.py  reversal.py  reversal_strategy.py  strategy.py
qcomponents/: chunked_data.py
qdatabase/: database.py
qdatabase/.tables/: ALPACA_STOCK_MONTHLY.parquet
qdatabase/tests/: crud_test.py
src/: alpaca-test.py  data.py  main.py  momentum_bt.py  reversal_bt.py  start_here.py
src/backtester/: __init__.py  backtester.py
src/datasets/: __init__.py  alpaca_assets.py  alpaca_stock.py  alpaca_stock_monthly.py  toy_dataset.py
src/features/: __init__.py  momentum.py
src/optimizers/: __init__.py  decile_portfolio.py
src/signals/: __init__.py  momentum.py  reversal.py
src/strategies/: __init__.py  momentum.py  reversal.py
